Keep corpus iteration order stable, and digest the corpus into the manifest
Map.copyOf and the other immutable collections randomise iteration order per
JVM run — three runs of the same input gave three different orders. The index
derives its document ids from that order and the manifest now derives a corpus
digest from it, so both would have differed on every build from identical input.
The corpus is held in a LinkedHashMap wrapped as unmodifiable instead.

The manifest records corpusSha256 so a build can tell an index was left behind
by a corpus edit. A prompt count alone would miss one prompt being swapped for
another, which is the edit most likely to be made by hand and forgotten.